--- a/VL1_Software_Design/solutions/Ex1_Jupyter_Notebooks_Sol.ipynb
+++ b/VL1_Software_Design/solutions/Ex1_Jupyter_Notebooks_Sol.ipynb
@@ -120,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -138,5 +138,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
